2006-01-22  Callum McKenzie  <callum@spooky-possum.org>

	* minefield.c (gtk_minefield_multi_release): Remove a spurious
	warning.

2006-01-17  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.c: Patch from Scott Bronson to ensure user-edited
	accelerators are saved (bug #327280).

2006-01-09  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.c (win_game): Remove the scaling code for the custom
	scores. Due to a stuff-up on my part it hasn't actually been
	called for the entirety of the last release cycle. On top of that
	it makes for a UI nightmare (how do you explain the jump from a
	time to a score?). Given no-one has complained I think it is best
	that people realise that custom scores are just there to give some
	sort of metric and not something that should be competed over.

2006-01-08  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.c: Patch to allow compilation with the Forte C
	compiler. (Damien Carbery, Bug #326024.)

2005-12-20  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.c (main): Add setgid_io_init ().

2005-10-02  Callum McKenzie  <callum@spooky-possum.org>

	* minefield.c (gtk_minefield_motion_notify): Don't reset c to -1
	when a button is release: other buttons may still be pressed. Also
	add a check on the value of c to _multi_release. See bug 315767.

2005-09-08  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.c: Remove calls to the old games-scores-dialog API.

2005-09-07  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.c: Migrate to the new high scores API.

2005-08-26  Callum McKenzie  <callum@spooky-possum.org>

	* minefield.c: Decide what to do with a left-click when the button
	is released. This fixes a reversion in behaviour when "sweeping"
	the board. See bug #314403. As a side-effect the highlight of
	surrounding squares also behaves properly when sweeping from a
	cleared square to an uncleared one.

2005-08-10  Callum McKenzie  <callum@physics.otago.ac.nz>
